community/php7-phalcon: upgrade to 4.0.0

--- a/community/php7-phalcon/APKBUILD
+++ b/community/php7-phalcon/APKBUILD
@@ -3,20 +3,19 @@
 pkgname=php7-phalcon
 _pkgext=phalcon
 _pkgreal=cphalcon
-pkgver=3.4.5
+pkgver=4.0.0
 _pkgver=${pkgver/_rc/RC}
 pkgrel=0
 pkgdesc="High performance, full-stack PHP framework delivered as a C extension"
 url="https://github.com/phalcon/cphalcon"
 arch="all"
 license="BSD-3-Clause"
-depends="php7-curl php7-fileinfo php7-gettext php7-json php7-mbstring php7-openssl php7-pdo"
-makedepends="php7-dev autoconf pcre-dev gd-dev"
+depends="php7-curl php7-fileinfo php7-gettext php7-json php7-mbstring php7-openssl php7-pdo php7-session php7-pecl-psr"
+makedepends="php7-dev autoconf re2c pcre-dev gd-dev libexecinfo-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/phalcon/$_pkgreal/archive/v$_pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$_pkgver/build/${pkgname%%-*}/safe"
 
 build() {
-	cd "$builddir"
 	phpize7
 	./configure --prefix=/usr --with-php-config=/usr/bin/php-config7
 	make
@@ -24,15 +23,21 @@ build() {
 
 check() {
 	# It needs some external services to run checks
-	php7 -d extension="$builddir"/modules/$_pkgext.so --ri $_pkgext
+	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 test \
+		TESTS="../../../tests/syntax" \
+		PHP_TEST_SHARED_EXTENSIONS=" \
+		-d extension=/usr/lib/php7/modules/json.so \
+		-d extension=/usr/lib/php7/modules/pdo.so \
+		-d extension=/usr/lib/php7/modules/psr.so \
+		-d extension=/usr/lib/php7/modules/session.so \
+		-d extension=modules/phalcon.so"
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir/" install
 	rm -fr "$pkgdir/usr/include"
 	install -d "$pkgdir"/etc/php7/conf.d
 	echo "extension=$_pkgext.so" > "$pkgdir"/etc/php7/conf.d/$_pkgext.ini
 }
 
-sha512sums="b91cd00e2d82ccf87d56cd35f9281c24feaa8dafb02e3c591f31c56ceb3d7d057358a9b4f9f8160119151f4594a62588660dc3cdecf6ba5c7e9b3db878190890  php7-phalcon-3.4.5.tar.gz"
+sha512sums="3ca6ee5f3fbfa64546f8d5885e7b6aa6b680f17e4613aa29b744a24fd040bead95a379adbdabfe4bd04610789907f9e3fe3b751e4bebbf17baca5391f7043849  php7-phalcon-4.0.0.tar.gz"
