--- a/community/php7-pecl-igbinary/APKBUILD
+++ b/community/php7-pecl-igbinary/APKBUILD
@@ -3,8 +3,8 @@
 
 pkgname=php7-pecl-igbinary
 _pkgreal=igbinary
-pkgver=3.0.1
-pkgrel=1
+pkgver=3.1.0
+pkgrel=0
 pkgdesc="Igbinary is a drop in replacement for the standard php serializer"
 url="https://pecl.php.net/package/igbinary"
 arch="all"
@@ -17,7 +17,6 @@ source="$pkgname-$pkgver.tgz::https://pecl.php.net/get/$_pkgreal-$pkgver.tgz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 build() {
-	cd "$builddir"
 	phpize7
 	./configure \
 		--prefix=/usr \
@@ -26,18 +25,17 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	# Tests require json extension which is not bundled
-	sed -i 's#PHP_TEST_SHARED_EXTENSIONS =  `#PHP_TEST_SHARED_EXTENSIONS = -d extension=/usr/lib/php7/modules/json.so `#' Makefile
-	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 test
+	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 test \
+		PHP_TEST_SHARED_EXTENSIONS="-d extension=/usr/lib/php7/modules/json.so \
+		-d extension=modules/$_pkgreal.so"
 }
 
 package() {
-	cd "$builddir"
 	make INSTALL_ROOT="$pkgdir" install
 	install -d "$pkgdir"/etc/php7/conf.d
 	echo "extension=$_pkgreal.so" > \
 		"$pkgdir"/etc/php7/conf.d/10_$_pkgreal.ini
 }
 
-sha512sums="2a1fbc3fe98e2ed84093c01e615df48c0de5ff85bb96b0df43659facd8680512545371a482c4e7f8d2f14e91eb455c9fc512245d5ba8647d912ba69b49512d37  php7-pecl-igbinary-3.0.1.tgz"
+sha512sums="3b3010a43510ab4f52a2282b40a2b4da01a02ab6267c4ea155e51d65f9a7d7fb1ca4e5943ed874a0a2f3cb0dc8e44491fe2206335d28999c96d83f3c8ae52a3d  php7-pecl-igbinary-3.1.0.tgz"
