main/mkinitfs: backport rpirtc support
Backport rpirtc fix

--- a/main/mkinitfs/APKBUILD
+++ b/main/mkinitfs/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=mkinitfs
 pkgver=3.4.3
 _ver=${pkgver%_git*}
-pkgrel=0
+pkgrel=1
 pkgdesc="Tool to generate initramfs images for Alpine"
 url="https://git.alpinelinux.org/cgit/mkinitfs"
 arch="all"
@@ -16,6 +16,7 @@ subpackages="$pkgname-doc"
 install="$pkgname.pre-upgrade $pkgname.post-install $pkgname.post-upgrade"
 triggers="$pkgname.trigger=/usr/share/kernel/*"
 source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-$_ver.tar.xz
+	add-feature-rpirtc.patch
 	"
 
 build() {
@@ -28,4 +29,5 @@ package() {
 	make install DESTDIR="$pkgdir"
 }
 
-sha512sums="d335a6f58ca38a3cc6dcc560baaabd3ea9522ce25de008eb637f0761db7f783c3b03767ba046c3d34550d1d0741bcc54ad09903b41e79fe408264eadbbc0a457  mkinitfs-3.4.3.tar.xz"
+sha512sums="d335a6f58ca38a3cc6dcc560baaabd3ea9522ce25de008eb637f0761db7f783c3b03767ba046c3d34550d1d0741bcc54ad09903b41e79fe408264eadbbc0a457  mkinitfs-3.4.3.tar.xz
+964481c742c1c7ac6b77c075f2c75f8d8f6277e8b781ea88e0fa6cb652fe892de8530cf120801ad73794bed19556af2c56ec2c1d1a7fcf6a802df93341d650bc  add-feature-rpirtc.patch"
