main/mkinitfs: backport rpirtc support
Backport rpirtc fix

--- a/main/mkinitfs/APKBUILD
+++ b/main/mkinitfs/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=mkinitfs
 pkgver=3.4.1
 _ver=${pkgver%_git*}
-pkgrel=0
+pkgrel=1
 pkgdesc="Tool to generate initramfs images for Alpine"
 url="https://git.alpinelinux.org/cgit/mkinitfs"
 arch="all"
@@ -17,6 +17,7 @@ subpackages="$pkgname-doc"
 install="$pkgname.pre-upgrade $pkgname.post-install $pkgname.post-upgrade"
 triggers="$pkgname.trigger=/usr/share/kernel/*"
 source="https://dev.alpinelinux.org/archive/$pkgname/$pkgname-$_ver.tar.xz
+	add-feature-rpirtc.patch
 	"
 
 builddir="$srcdir/$pkgname-$_ver"
@@ -31,4 +32,5 @@ package() {
 	make install DESTDIR="$pkgdir"
 }
 
-sha512sums="3839f3ec4ca9f7318a611397c7190d19ae2267f31ffa97bb3777a024940799bccef3db7374d3c840b95290c493b2d3795ed2d03d72eb984c202de00c182eef77  mkinitfs-3.4.1.tar.xz"
+sha512sums="3839f3ec4ca9f7318a611397c7190d19ae2267f31ffa97bb3777a024940799bccef3db7374d3c840b95290c493b2d3795ed2d03d72eb984c202de00c182eef77  mkinitfs-3.4.1.tar.xz
+52a53a936cbe3771c5316cf5c40ef14eca31556f5559af98389955d1924509db65c550f07eaa9af2afe294dc79eaeb916499b8c9e7386646c40419d868b32d28  add-feature-rpirtc.patch"
