testing/netdata: upgrade to 1.19.0

--- a/testing/netdata/APKBUILD
+++ b/testing/netdata/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=netdata
-pkgver=1.18.1
-pkgrel=2
+pkgver=1.19.0
+pkgrel=0
 pkgdesc="Real-time performance monitoring"
 url="https://www.netdata.cloud/"
 license="GPL-3.0-or-later"
@@ -36,6 +36,7 @@ build() {
 }
 
 check() {
+	msg "check"
 	make check
 }
 
@@ -95,5 +96,5 @@ python() {
 		$subpkgdir/usr/lib/netdata/conf.d
 }
 
-sha512sums="fb72f4729e05ab83fe9462e31b10fc40243472ea9f6cbb9421e2ca549810f2f80b28b05e886faa66e15c53b317ee559a3e0fb3d382c36a424dd39fec779918d9  netdata-1.18.1.tar.gz
+sha512sums="026ae159d8ed52a30e406c110c2732e54e50f070865ba3e430df73e4df40387105053e750ca6029cfbc7f40a2c05b7fb6ba4e3e4a7070822c7eec4c1a4712aea  netdata-1.19.0.tar.gz
 98dd8f188dfffe1221d05a4dd369e8f4f8dc2bf7a722ac8769afd351324b53b37c5675e705a4d42d20ce93ea9497fda9eb2457edaa500d4e72c9f1350b1d4652  netdata.initd"
