--- a/testing/next/APKBUILD
+++ b/testing/next/APKBUILD
@@ -2,25 +2,25 @@
 # Contributor: Will Sinatra <wpsinatra@gmail.com>
 # Contributor: Benjamin Buccianti <bebuccianti@gmail.com>
 pkgname=next
-pkgver=1.3.2
+pkgver=1.3.4
 pkgrel=0
 pkgdesc="Atlas Engineer Next Browser"
 url="https://next.atlas.engineer"
-arch="x86_64" #SBCL currently only built for x86_64, to be expanded once compatibility is met.
+arch="x86_64" #SBCL currently only built for x86_64, to be expanded once compatibility is met
 license="BSD-3-Clause"
-source=next.zip::"https://github.com/atlas-engineer/next/archive/$pkgver.zip"
+source="$pkgname-$pkgver.zip::https://github.com/atlas-engineer/next/archive/$pkgver.zip"
 makedepends="git sbcl webkit2gtk-dev"
 depends="webkit2gtk glib-networking gsettings-desktop-schemas libfixposix libfixposix-dev gstreamer gst-plugins-base gst-plugins-good gst-plugins-bad gst-plugins-ugly libffi libffi-dev"
 options="!check !strip" #No testsuite exists; Stripping the package causes the
 # package to build, but the next browser is unfunctional, dropping to an SBCL repl
 # instead of properly running.
 
-
 build() {
 	make all
-}      
+}
 
 package() {
 	make PREFIX=/usr DESTDIR="$pkgdir" install
 }
-sha512sums="07bc3b47a4ebb3857d7ada4c8dc56d35f7c84460d108467a580b6d42a9da273ffafd73b2beb8274f94788554444132beb605b383fd9e3d6d4ff6cacc1e870da9  next.zip"
+
+sha512sums="036dd3fb6078ea510ac3f5b00cacd416018772cb0c9e838b26629947ea5bc0572c31e125fc9ba8294d0354e380fb8169fbed3c8b58c584898198bc441c611bd0  next-1.3.4.zip"
