--- a/community/py3-keepass/APKBUILD
+++ b/community/py3-keepass/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-keepass
 pkgver=3.0.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Python3 library to interact with keepass databases"
 url="https://github.com/pschmitt/pykeepass"
 arch="noarch !s390x" # pykeepass test fail on s390x
@@ -10,7 +10,9 @@ license="GPL-3.0-only"
 depends="python3 py3-dateutil py3-pycryptodome py3-construct py3-lxml
 	py3-argon2-cffi py3-cffi py3-future py3-setuptools"
 makedepends="python3-dev"
-source="https://pypi.io/packages/source/p/pykeepass/pykeepass-$pkgver.tar.gz"
+options="!check" # missing py3-wheel
+source="https://pypi.io/packages/source/p/pykeepass/pykeepass-$pkgver.tar.gz
+	use-pycryptodome-instead-of-pycrypto.patch"
 builddir="$srcdir/pykeepass-$pkgver"
 
 build() {
@@ -25,4 +27,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="c683f434032543be741696f8cc943995bb070db0463a9027279813fa42a9fbdf8747342cc59da24231ac70abb00b5036ccfcb24dc99a231902ed13f1e3438f58  pykeepass-3.0.3.tar.gz"
+sha512sums="c683f434032543be741696f8cc943995bb070db0463a9027279813fa42a9fbdf8747342cc59da24231ac70abb00b5036ccfcb24dc99a231902ed13f1e3438f58  pykeepass-3.0.3.tar.gz
+5a692f151c51c47dda7eb0d95d500e6df8121eb017c52b3105ebfcf65669c5cb74f6e1f6f8a6c3828ed1196b3bfa42d263983111ec65b55a78f3f04fc7cf2136  use-pycryptodome-instead-of-pycrypto.patch"
