community/gnome-passwordsafe: use Cryptodome instead of Crypto
We've recently changed what namespace py3-pycryptodome provides. ref #10963

--- a/community/gnome-passwordsafe/APKBUILD
+++ b/community/gnome-passwordsafe/APKBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-passwordsafe
 pkgver=3.32.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A password manager for GNOME"
 url="https://gitlab.gnome.org/World/PasswordSafe"
 arch="noarch !s390x" # Limited by py3-keepass
 license="GPL-3.0-only"
-depends="python3 py3-keepass libhandy py3-libpwquality py3-gobject3"
+depends="python3 py3-keepass libhandy py3-libpwquality py3-gobject3 py3-pycryptodome"
 makedepends="meson gtk+3.0-dev libhandy-dev libpwquality-dev gobject-introspection-dev"
 checkdepends="appstream-glib desktop-file-utils"
 subpackages="$pkgname-lang"
 source="https://gitlab.gnome.org/World/PasswordSafe/-/archive/$pkgver/PasswordSafe-$pkgver.tar.gz
-	dont-require-py3-gettext-support.patch"
+	dont-require-py3-gettext-support.patch
+	use-pycryptodome-instead-of-pycrypto.patch"
 builddir="$srcdir/PasswordSafe-$pkgver"
 
 build() {
@@ -35,4 +36,5 @@ package() {
 }
 
 sha512sums="ad568cf1d635b7a1b00948a722dfbcba36ab2655a6b772962b4c2fb08d75e2a60787180017edd3305a7f4e3043cd9216cc5829a9889caf859cdc3d47f16da317  PasswordSafe-3.32.0.tar.gz
-431e37942e5af402427f6e16b1155465758ba8b2e7ef3799523a0925de451e6f4cb5ec27d5be05c496cd123dd3eb4e4fb874b82d68a7b9914bab6e99855f1565  dont-require-py3-gettext-support.patch"
+431e37942e5af402427f6e16b1155465758ba8b2e7ef3799523a0925de451e6f4cb5ec27d5be05c496cd123dd3eb4e4fb874b82d68a7b9914bab6e99855f1565  dont-require-py3-gettext-support.patch
+5dc44894e975e84a10e5908d898fa93eb0c69670a8827f9395dec76b8c407a8277c4a6d55ff2113127b0a9ec4c2c9e991db8464e74ec2f3ba3d0c37dbacc8d36  use-pycryptodome-instead-of-pycrypto.patch"
