main/py3-pycryptodome: replace py3-crypto
pycrypto's last release was in [2013][0], and pycryptodome is mostly
[backwards compatible][1], so replace py3-crypto.

[0]: https://pypi.org/project/pycrypto/#history
[1]: https://pycryptodome.readthedocs.io/en/latest/src/vs_pycrypto.html

--- a/main/py3-pycryptodome/APKBUILD
+++ b/main/py3-pycryptodome/APKBUILD
@@ -11,12 +11,8 @@ makedepends="python3-dev py3-setuptools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/Legrandin/pycryptodome/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/pycryptodome-$pkgver
 
-replaces="py-pycryptodome" # Backwards compatibility
-provides="py-pycryptodome=$pkgver-r$pkgrel" # Backwards compatibility
-
-prepare() {
-	touch "$builddir"/.separate_namespace
-}
+replaces="py-pycryptodome py3-crypto" # Backwards compatibility
+provides="py-pycryptodome=$pkgver-r$pkgrel py3-crypto=$pkgrel-r$pkgrel" # Backwards compatibility
 
 build() {
 	python3 setup.py --quiet build
