main/ansible: depend on py3-pycryptodome

--- a/main/ansible/APKBUILD
+++ b/main/ansible/APKBUILD
@@ -4,12 +4,12 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=ansible
 pkgver=2.9.2
-pkgrel=0
+pkgrel=1
 pkgdesc="A configuration-management, deployment, task-execution, and multinode orchestration framework"
 url="https://ansible.com/"
 arch="noarch"
 license="GPL-3.0-or-later"
-depends="python3 py3-yaml py3-paramiko py3-jinja2 py3-markupsafe py3-crypto"
+depends="python3 py3-yaml py3-paramiko py3-jinja2 py3-markupsafe py3-pycryptodome"
 makedepends="python3-dev py3-setuptools"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://releases.ansible.com/ansible/ansible-$pkgver.tar.gz
