--- a/community/py3-snmp/APKBUILD
+++ b/community/py3-snmp/APKBUILD
@@ -3,13 +3,13 @@
 pkgname=py3-snmp
 _pkgname=pysnmp
 pkgver=4.4.11
-pkgrel=2
+pkgrel=3
 pkgdesc="Python3 SNMP v1/v2c/v3 engine"
 url="http://snmplabs.com/pysnmp/index.html"
 arch="noarch"
 license="BSD-2-Clause"
 options="!check"
-depends="python3 py3-asn1 py3-crypto"
+depends="python3 py3-asn1 py3-pycryptodome"
 makedepends="py3-setuptools"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz
 	remove-bogus-check.patch
