--- a/testing/binwalk/APKBUILD
+++ b/testing/binwalk/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=binwalk
 pkgver=2.2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Fast, easy to use tool for analyzing and extracting firmware images"
 url="https://github.com/ReFirmLabs/binwalk/"
 arch="noarch"
 license="MIT"
-depends="py3-crypto python3"
+depends="py3-pycryptodome python3"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ReFirmLabs/binwalk/archive/v$pkgver.tar.gz"
 
 build() {
