--- a/main/bison/APKBUILD
+++ b/main/bison/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=bison
-pkgver=3.4.2
+pkgver=3.5
 pkgrel=0
 pkgdesc="The GNU general-purpose parser generator"
 arch="all"
@@ -11,8 +11,7 @@ makedepends="perl"
 depends="m4"
 checkdepends="bison flex"
 [ -n "$BOOTSTRAP" ] && options="!check"
-source="https://ftp.gnu.org/gnu/bison/bison-$pkgver.tar.xz
-	parallel-build-fix.patch"
+source="https://ftp.gnu.org/gnu/bison/bison-$pkgver.tar.xz"
 subpackages="$pkgname-doc"
 
 build() {
@@ -24,7 +23,7 @@ build() {
 		--datadir=/usr/share \
 		--infodir=/usr/share/info \
 		--mandir=/usr/share/man
-	make
+	make -j1
 }
 
 check() {
@@ -39,5 +38,4 @@ package() {
 	rmdir -p "$pkgdir"/usr/lib 2>/dev/null || true
 }
 
-sha512sums="00d2b37187b93100ec4b220ce2752d12ccf68f9d0d39b380d375d36dd8a22aa1d6e60156918f95e4493f9531c5d42d8fad38fd807307b491c1ca7ca4177823d9  bison-3.4.2.tar.xz
-73655800f32ddf369f51b541999fafff3ae3191d03856d8a082aed488f21af44f359fa92f2bb9fea651db33499e8ae7ca932f451bfa74f9598e7e724820bf4de  parallel-build-fix.patch"
+sha512sums="309ba77cfbf5d5ca697f522ac18ca9b55a1ec4e690b87220c97ffb1137b8bd8b22aa14c111166f0f4bf001e88f4bcbfd0583bc09810c246f0dc60fd6e8478950  bison-3.5.tar.xz"
