main/xf86-video-amdgpu: upgrade to 19.1.0

--- a/main/xf86-video-amdgpu/APKBUILD
+++ b/main/xf86-video-amdgpu/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Linus Swälas <linus.swalas@borderless.se>
 pkgname=xf86-video-amdgpu
-pkgver=19.0.1
+pkgver=19.1.0
 pkgrel=0
 pkgdesc="AMD Rx/HDxxxx video driver"
 url="https://xorg.freedesktop.org"
@@ -10,11 +10,10 @@ subpackages="$pkgname-doc"
 options="!check"
 depends="mesa-dri-ati"
 makedepends="xorg-server-dev libxi-dev libdrm-dev mesa-dev eudev-dev pixman-dev
-	util-macros xorgproto"
+	util-macros xorgproto libpciaccess-dev"
 source="https://www.x.org/releases/individual/driver/xf86-video-amdgpu-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	export LDFLAGS="$LDFLAGS -Wl,-z,lazy"
 
 	./configure \
@@ -25,14 +24,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -Dm644 COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
 }
 
-sha512sums="dda04e3ccee140354f59e04895cf50cd7dc06a105c40ce35069613c5b5fbe083cab6833fd293d96334f64dde1a0c4af6154d473594a144f37404188ae7f37dd5  xf86-video-amdgpu-19.0.1.tar.bz2"
+sha512sums="ccdaa2378492da1a2f3d18fedacd1318c4708da534a8a959276a82730d5420619d83ad1ec8d7835c55655fe56123cd9bffb44e6223c5a97033c01f598af4a173  xf86-video-amdgpu-19.1.0.tar.bz2"
