testing/xf86-input-wacom: upgrade to 0.39.0

--- a/testing/xf86-input-wacom/APKBUILD
+++ b/testing/xf86-input-wacom/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Ivan Tham <pickfire@riseup.net>
 # Maintainer: Ivan Tham <pickfire@riseup.net>
 pkgname=xf86-input-wacom
-pkgver=0.38.0
+pkgver=0.39.0
 pkgrel=0
 pkgdesc="X.org Wacom tablet input driver"
 url="https://github.com/linuxwacom/xf86-input-wacom"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="xorg-server-dev libxext-dev libxi-dev libxrandr-dev libxinerama-dev
-	eudev-dev"
+	eudev-dev util-macros libpciaccess-dev"
 checkdepends="bash findutils"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/linuxwacom/xf86-input-wacom/releases/download/xf86-input-wacom-$pkgver/xf86-input-wacom-$pkgver.tar.bz2"
@@ -26,4 +26,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="853d0d91c5a18a96ccf9e30abdabc69c1bc9fc3c067746762eb789240272d1d7faaaa4524e60fd299f44d9f6603adb2de69caf697cde3f841debab8232d983b5  xf86-input-wacom-0.38.0.tar.bz2"
+sha512sums="9ad92c86c4ba3587d68e2107057c89dfe8628c0a2ec882f5a424ab4983c18ff6048489d7f6d3a8de87403744f74de1982de25327fc955bb5c21346a242e0aaa3  xf86-input-wacom-0.39.0.tar.bz2"
