--- a/community/xpra/APKBUILD
+++ b/community/xpra/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Stuart Cardall <developer@it-offshore.co.uk>
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=xpra
-pkgver=3.0.2
-pkgrel=2
+pkgver=3.0.3
+pkgrel=0
 pkgdesc="Xpra is 'screen for X' & allows you to run X programs, usually on a remote host over SSH or encrypted tcp"
 url="https://xpra.org"
 arch="all"
@@ -64,9 +64,7 @@ makedepends="
 	"
 subpackages="$pkgname-openrc $pkgname-doc $pkgname-tests::noarch $pkgname-webclient::noarch"
 options="!check"
-source="https://xpra.org/src/xpra-$pkgver.tar.xz
-	avoid-x86-only-compile-flags.patch
-	"
+source="https://xpra.org/src/xpra-$pkgver.tar.xz"
 
 build() {
 	# https://www.xpra.org/trac/ticket/1080
@@ -102,5 +100,4 @@ webclient() {
 	cp -rf usr/share/xpra/www "$subpkgdir"/usr/share/xpra/
 }
 
-sha512sums="115f606ff5886d99a906f318cb1a7a4a86e80ebf23e4336e67938267d92ef624de577cc8fc06c6ce541b7c44a0cef58d930b5928f32e24dfc67c72127c7b623c  xpra-3.0.2.tar.xz
-249028f61d20ee8c8378f9cebe13c6e0f288c7635eb66be44e20fef9af023266e1266a893cd4ce56dd7714ac1eb851be59cea5733fb8fc787e4b92e4f10c2a16  avoid-x86-only-compile-flags.patch"
+sha512sums="0d13a2685b22e0c90450c0dddeef0663255c6d9e15e347e960c9ac7857cd2081b15d1fdc29b816b5cfdf1f000375be34510fe25be23af3f3b63a8a25d1b31003  xpra-3.0.3.tar.xz"
