--- a/main/libpcap/APKBUILD
+++ b/main/libpcap/APKBUILD
@@ -14,6 +14,15 @@ source="http://www.tcpdump.org/release/$pkgname-$pkgver.tar.gz
 subpackages="$pkgname-doc $pkgname-dev"
 builddir="$srcdir"/$pkgname-$pkgver
 
+# secfixes:
+#   1.9.1-r0:
+#    - CVE-2018-16301
+#    - CVE-2019-15161
+#    - CVE-2019-15162
+#    - CVE-2019-15163
+#    - CVE-2019-15164
+#    - CVE-2019-15165
+
 build() {
 	cd "$builddir"
 	./configure \
