main/libpcap: update url to https

--- a/main/libpcap/APKBUILD
+++ b/main/libpcap/APKBUILD
@@ -1,15 +1,15 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libpcap
 pkgver=1.9.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A system-independent interface for user-level packet capture"
-url="http://www.tcpdump.org/"
+url="https://www.tcpdump.org/"
 arch="all"
 license="BSD"
 depends=
 options="!check"
 makedepends="bison flex autoconf linux-headers"
-source="http://www.tcpdump.org/release/$pkgname-$pkgver.tar.gz
+source="https://www.tcpdump.org/release/$pkgname-$pkgver.tar.gz
 	fix-headers.patch"
 subpackages="$pkgname-doc $pkgname-dev"
 builddir="$srcdir"/$pkgname-$pkgver
