--- a/main/tcpdump/APKBUILD
+++ b/main/tcpdump/APKBUILD
@@ -1,15 +1,15 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=tcpdump
 pkgver=4.9.3
-pkgrel=0
+pkgrel=1
 pkgdesc="A tool for network monitoring and data acquisition"
-url="http://www.tcpdump.org"
+url="https://www.tcpdump.org/"
 arch="all"
 license="BSD-3-Clause"
 options="!check" # fail on ppc64le
 makedepends="libpcap-dev openssl-dev perl"
 subpackages="$pkgname-doc"
-source="http://www.$pkgname.org/release/$pkgname-$pkgver.tar.gz"
+source="https://www.tcpdump.org/release/$pkgname-$pkgver.tar.gz"
 
 # secfixes:
 #   4.9.3-r0:
