--- a/testing/kicad-library/APKBUILD
+++ b/testing/kicad-library/APKBUILD
@@ -1,11 +1,12 @@
 # Maintainer: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 # Contributor: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 pkgname=kicad-library
-pkgver=5.1.4
+pkgver=5.1.5
 pkgrel=0
 pkgdesc="Kicad component and footprint libraries"
 url="http://kicad.github.io/"
-arch="x86_64"
+# kicad is only available on x86_64 currently :-/
+arch="noarch !armv7 !aarch64 !ppc64le !s390x !x86"
 license="GPL-3.0-or-later"
 makedepends="cmake"
 depends="kicad"
@@ -13,7 +14,7 @@ subpackages="$pkgname-3d:three_d"
 source="
 	kicad-sym.$pkgver.tgz::https://github.com/KiCad/kicad-symbols/archive/$pkgver.tar.gz
 	kicad-foot.$pkgver.tgz::https://github.com/KiCad/kicad-footprints/archive/$pkgver.tar.gz
-	kicad-3d.$pkgver.tgz::https://github.com/KiCad/kicad-packages3D/archive/$pkgver.tar.gz
+	kicad-3d.$pkgver.tgz::https://codeload.github.com/KiCad/kicad-packages3D/tar.gz/$pkgver
 	"
 options="!check" # package only provides data files, so not tests possible
 
@@ -45,7 +46,10 @@ package() {
 three_d() {
 	cd "$srcdir"/kicad-packages3D-$pkgver
 	make DESTDIR="$subpkgdir" install
+
+	# Remove .step version of 3D models; only .wrl versions are needed
+	find "$subpkgdir" -name '*.step' -exec rm {} \;
 }
-sha512sums="573dd74d5d3c2b32fc12499826a9e43e5d63649f760c91e5fc3d7a8acb44b2308bbd70facc4f29d139dd895ec26f0feb1d9195b2194131e6c13397d030464fd5  kicad-sym.5.1.4.tgz
-84dee71a0e52d8bb4bc8d5708a0472bab9fae4ec47553e234ed8ca4aca926fa200593d264e016e688e2c0eb1fe4a680da8b8a5e48b7dc54866241d9965d235b5  kicad-foot.5.1.4.tgz
-39f6448670311055e74580cdbb196c71d184d0ce9c7b7ba849812cae3702e08273c1fcffe1ba6203ef6b5f54aa83845c4238c2b154eae44930dc411f8749201b  kicad-3d.5.1.4.tgz"
+sha512sums="345c7990ba17f778fa975250fbb067a01472aa6e03cbd08a1e34203af5517981b6a569981e30b4d56e58a3966c364b529b9679a96a46ef538bd5ac6a6b46eac7  kicad-sym.5.1.5.tgz
+dbfb482d41d1c109e1fb395d194f700e45f1c268a33645b71cd9d98ada32369fe01dd6bf10c7f767c65b9b4e0efa6fc1bde1e4c91b9f4b751540fe3b511ba5b4  kicad-foot.5.1.5.tgz
+844de269cd9c1c0c4082f09097dc853cd49a2942f621229604b9996c61f8e1c1a0b1008201ad2e13107a07b3f4601601f2d361b60b6e62984165dcdfd1dd378c  kicad-3d.5.1.5.tgz"
