community/dolphin: re-enable test requiring dbus

--- a/community/dolphin/APKBUILD
+++ b/community/dolphin/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=dolphin
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://kde.org/applications/system/dolphin"
 pkgdesc="KDE File Manager"
@@ -14,7 +14,7 @@ depends_dev="qt5-qtbase-dev kdoctools-dev kinit-dev kcmutils-dev knewstuff-dev
 	ktextwidgets-dev knotifications-dev kcrash-dev kwindowsystem-dev
 	phonon-dev baloo-dev baloo-widgets-dev kfilemetadata-dev kactivities-dev"
 makedepends="$depends_dev extra-cmake-modules ruby-test-unit"
-checkdepends="xvfb-run"
+checkdepends="xvfb-run dbus"
 source="https://download.kde.org/stable/release-service/$pkgver/src/dolphin-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 
@@ -36,8 +36,7 @@ build() {
 check() {
 	cd "$builddir"/build
 	# kfileitemmodeltest and placesitemmodeltest are broken
-	# dolphinmainwindowtest requires running DBus
-	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest -E "(kfileitemmodel|placesitemmodel|dolphinmainwindow)test"
+	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest -E "(kfileitemmodel|placesitemmodel)test"
 }
 
 package() {
