main/libtirpc: upgrade to 1.2.5

--- a/main/libtirpc/APKBUILD
+++ b/main/libtirpc/APKBUILD
@@ -1,30 +1,23 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libtirpc
-pkgver=1.1.4
+pkgver=1.2.5
 pkgrel=0
 pkgdesc="Transport Independent RPC library (SunRPC replacement)"
 url="https://sourceforge.net/projects/libtirpc"
 arch="all"
 license="BSD-3-Clause"
 options="!check"
-depends=
 depends_dev="krb5-dev bsd-compat-headers"
 makedepends="$depends_dev autoconf automake libtool linux-headers"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-dbg"
-source="https://sourceforge.net/projects/$pkgname/files/$pkgname/$pkgver/$pkgname-$pkgver.tar.bz2
-	musl.patch
-	"
-builddir="$srcdir/$pkgname-$pkgver"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-dbg"
+source="https://sourceforge.net/projects/libtirpc/files/libtirpc/$pkgver/libtirpc-$pkgver.tar.bz2"
 
 prepare() {
-	cd "$builddir"
 	default_prepare
-	aclocal
-	autoreconf
+	autoreconf -fi
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -34,9 +27,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="392f391f9fc1bd68d81dc44e4058831a64b32790b5c8c37338b0ab416fad2ae4d16389e632596734dba09780347918cc65c6f134e0c1afd09e81ec250785ed23  libtirpc-1.1.4.tar.bz2
-8e52246ae478ae9e4689426627e17d9c58d701f4fd21a40ffe3cf17c4ceaa4ab2e8e91d2fa3ba0d0c7adc52ae4b986fcda113ec86e370ede83903bb641de520c  musl.patch"
+sha512sums="d31cd4e22301abe1baddd7e8f45aaaf056a40799e961646691d071084fed50563b5eecdd9b78062fe378be8db7a6d4b87597e21cb81ac925e447148684a2b002  libtirpc-1.2.5.tar.bz2"
