main/linux-rpi: fix dtbs location
fixes #11056

--- a/main/linux-rpi/APKBUILD
+++ b/main/linux-rpi/APKBUILD
@@ -6,7 +6,7 @@ case $pkgver in
 *.*.*)	_kernver=${pkgver%.*};;
 *.*)	_kernver=${pkgver};;
 esac
-pkgrel=0
+pkgrel=1
 pkgdesc="Linux kernel with Raspberry Pi patches"
 url=https://github.com/raspberrypi/linux
 depends="mkinitfs"
@@ -196,7 +196,7 @@ _package() {
 	# around it by backing it up and restore it after modules_install
 	cp Module.symvers Module.symvers.backup
 
-	local INSTALL_DTBS_PATH="$_outdir"/usr/lib/linux-${_abi_release}
+	local INSTALL_DTBS_PATH="$_outdir"/boot/dtbs-$_buildflavor
 	make -j1 modules_install $_install \
 		ARCH="$_carch" \
 		INSTALL_MOD_PATH="$_outdir" \
