testing/avarice: depend on gdb-multiarch
gdb-embedded was removed in c392b8ec5837042ae808da94112c3b09e9615c1f.

--- a/testing/avarice/APKBUILD
+++ b/testing/avarice/APKBUILD
@@ -6,13 +6,13 @@ _svndate=20160229
 # The latest AVaRICE release doesn't comply on all but history environments.
 # Sadly, new release are no longer created.
 pkgver=${_releasever}_svn$_svnver
-pkgrel=0
+pkgrel=1
 pkgdesc="AVaRICE interfaces with GDB and allows debugging of AVR MCUs"
 url="http://avarice.sourceforge.net/"
 arch="all"
 license="GPL-2.0-only"
 makedepends="binutils-dev libusb-dev libusb-compat-dev autoconf automake"
-depends="gdb-avr"
+depends="gdb-multiarch"
 subpackages="$pkgname-doc"
 source="http://deb.debian.org/debian/pool/main/a/avarice/avarice_$_releasever+svn$_svnver.orig.tar.xz"
 builddir="$srcdir/$pkgname-${_releasever}svn$_svndate"
