community/cacti: add secfixes comment

--- a/community/cacti/APKBUILD
+++ b/community/cacti/APKBUILD
@@ -20,6 +20,10 @@ source="https://www.cacti.net/downloads/cacti-$pkgver.tar.gz
 	$pkgname.php-fpm.conf
 	"
 
+# secfixes:
+#   1.2.8-r0:
+#     - CVE-2019-17358
+
 package() {
 	mkdir -p "$pkgdir"/usr/share/webapps/$pkgname \
 		"$pkgdir"/var/lib/$pkgname \
