--- a/main/monit/APKBUILD
+++ b/main/monit/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=monit
 pkgver=5.26.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Managing and monitoring on a UNIX system"
 url="https://mmonit.com/monit/"
 arch="all"
@@ -11,6 +11,7 @@ license="AGPL-3.0-or-later"
 makedepends="openssl-dev zlib-dev"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://mmonit.com/monit/dist/monit-$pkgver.tar.gz
+	fix-invalid-use-of-vfork.patch
 	$pkgname.initd
 	"
 
@@ -49,4 +50,5 @@ package() {
 }
 
 sha512sums="ae5bfc9f2e8cf2d2efa7a121f3bb865dc5b66b647e23e005349799f3f4384dfa1534ed88d0767ca41dac4cea2674fb82cfb51098129d350b470143df548c6900  monit-5.26.0.tar.gz
+549fda6dc92c2630152a29f5bb94d29a59abb06300e55eb93ed729758d73ed7dceaa2e9f491c9d33419920aef24c0360f865753be28af13a11216129529611ae  fix-invalid-use-of-vfork.patch
 cf2b417a73766ff568f1df904f1ccdee1289037994c8ba1743cf1d04cb1ea8945f66d6cb2c9bab868f600a7c7ae57436d1f49cccbe22745b41282034e169ef25  monit.initd"
