main/clamav: add secinfo

--- a/main/clamav/APKBUILD
+++ b/main/clamav/APKBUILD
@@ -33,6 +33,8 @@ source="https://www.clamav.net/downloads/production/$pkgname-$pkgver.tar.gz
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   0.102.1-r0:
+#     - CVE-2019-15961
 #   0.100.3-r0:
 #     - CVE-2019-1787
 #     - CVE-2019-1788
