--- a/community/hexchat/APKBUILD
+++ b/community/hexchat/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=hexchat
 pkgver=2.14.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Graphical IRC client based on XChat"
 url="https://hexchat.github.io"
 arch="all !armhf !armv7"
@@ -18,6 +18,7 @@ build() {
 		-Dwith-lua=lua5.3 \
 		-Dwith-sysinfo=false \
 		-Dwith-libcanberra=false \
+		-Dwith-python=python3-embed \
 		build_dir/
 	ninja -C build_dir/
 }
