--- a/community/kolourpaint/APKBUILD
+++ b/community/kolourpaint/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kolourpaint
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="http://www.kolourpaint.org/"
 pkgdesc="An easy-to-use paint program"
 license="BSD-2-Clauase AND LGPL-2.0-or-later AND GFDL-1.2"
-makedepends="extra-cmake-modules qt5-qtbase-dev kdoctools-dev ki18n-dev kguiaddons-dev kwidgetsaddons-dev kio-dev kxmlgui-dev kiconthemes-dev ktextwidgets-dev kitemmodels-dev kinit-dev kdelibs4support-dev libksane-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev kdoctools-dev ki18n-dev kguiaddons-dev kwidgetsaddons-dev kio-dev kxmlgui-dev kiconthemes-dev ktextwidgets-dev kitemmodels-dev kdelibs4support-dev libksane-dev"
 source="https://download.kde.org/stable/release-service/$pkgver/src/kolourpaint-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
