--- a/testing/umbrello/APKBUILD
+++ b/testing/umbrello/APKBUILD
@@ -2,18 +2,25 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=umbrello
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://umbrello.kde.org/"
 pkgdesc="GUI for diagramming Unified Modelling Language (UML)"
 license="GPL-2.0-or-later AND LGPL-2.0-or-later AND GFDL-1.2-only"
-makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev karchive-dev kcompletion-dev kconfig-dev kcoreaddons-dev kcrash-dev kdoctools-dev ki18n-dev kiconthemes-dev kinit-dev kdelibs4support-dev kio-dev ktexteditor-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev kitemmodels-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev karchive-dev kcompletion-dev kconfig-dev kcoreaddons-dev kcrash-dev kdoctools-dev ki18n-dev kiconthemes-dev kdelibs4support-dev kio-dev ktexteditor-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev kitemmodels-dev"
 checkdepends="xvfb-run"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/umbrello-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
@@ -22,10 +29,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
