main/zstd: fix bus error on armhf
fixes #11077

(cherry picked from commit 9b7d37db60d51377326869aac0b907150eabad26)

--- a/main/zstd/APKBUILD
+++ b/main/zstd/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=zstd
 pkgver=1.4.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Zstandard - Fast real-time compression algorithm"
 url="https://www.zstd.net"
 arch="all"
@@ -20,13 +20,17 @@ source="zstd-$pkgver.tar.gz::https://github.com/facebook/zstd/archive/v$pkgver.t
 build() {
 	cd "$builddir"
 	unset CPPFLAGS
-	make HAVE_PTHREAD=1 HAVE_ZLIB=0 HAVE_LZMA=0 HAVE_LZ4=0 MOREFLAGS="-O2"
+	local _moreflags="-O2"
+	case "$CARCH" in
+		# avoid memory copy hack that violates C standard
+		armhf) _moreflags="$_moreflags -DMEM_FORCE_MEMORY_ACCESS=0" ;;
+	esac
+	make HAVE_PTHREAD=1 HAVE_ZLIB=0 HAVE_LZMA=0 HAVE_LZ4=0 MOREFLAGS="$_moreflags"
 }
 
 check() {
 	cd "$builddir"
 	case "$CARCH" in
-		armhf) return 0 ;; # Fail on CI
 		arm*) make check ;;
 		*) make test ;;
 	esac
