community/go: depen on binuutils-gold on arm*/aarch64
ref #11064

--- a/community/go/APKBUILD
+++ b/community/go/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=go
 # go binaries are statically linked, security updates require rebuilds
 pkgver=1.13.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Go programming language compiler"
 url="https://golang.org/"
 arch="all"
@@ -20,6 +20,7 @@ source="https://golang.org/dl/go${pkgver/_/}.src.tar.gz
 	"
 
 case "$CARCH" in
+	arm*|aarch64) depends="binutils-gold";;
 	x86) options="!check" ;; # FIXME
 esac
 
