testing/kicad-library: disable build also on armhf

--- a/testing/kicad-library/APKBUILD
+++ b/testing/kicad-library/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=0
 pkgdesc="Kicad component and footprint libraries"
 url="http://kicad.github.io/"
 # kicad is only available on x86_64 currently :-/
-arch="noarch !armv7 !aarch64 !ppc64le !s390x !x86"
+arch="noarch !armhf !armv7 !aarch64 !ppc64le !s390x !x86"
 license="GPL-3.0-or-later"
 makedepends="cmake"
 depends="kicad"
