--- a/main/libvirt/APKBUILD
+++ b/main/libvirt/APKBUILD
@@ -1,11 +1,12 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libvirt
-pkgver=5.9.0
+pkgver=5.10.0
 _ver="${pkgver/_rc/-rc}"
 pkgrel=0
 pkgdesc="A virtualization API for several hypervisor and container systems"
 url="https://libvirt.org/"
 arch="all"
+options="!check"
 license="LGPL-2.1-or-later"
 _daemon_deps="bridge-utils dmidecode dnsmasq ip6tables iptables"
 _client_deps="pm-utils gnutls-utils netcat-openbsd"
@@ -16,15 +17,16 @@ makedepends="augeas-dev cyrus-sasl-dev device-mapper
 	netcf-dev libnl3-dev libxml2-dev libxslt-dev libtasn1-dev
 	lvm2-dev lxc-dev libgcrypt-dev parted-dev perl pkgconfig
 	eudev-dev zlib-dev yajl-dev libpcap-dev curl-dev libpciaccess-dev
-	polkit-dev readline-dev linux-headers libssh2-dev jansson-dev
+	polkit-dev readline-dev linux-headers jansson-dev
 	$depends_dev perl-xml-xpath
 	fuse-dev util-linux libxml2-utils bash-completion $_daemon_deps $_client_deps
+	automake autoconf libtool rpcsvc-proto
 	"
 install="$pkgname.post-install"
 subpackages="$pkgname-static $pkgname-libs $pkgname-dev $pkgname-doc $pkgname-client $pkgname-daemon
 	$pkgname-lang $pkgname-lxc $pkgname-qemu $pkgname-uml::noarch $pkgname-vbox
 	$pkgname-bash-completion:bashcomp:noarch"
-source="https://libvirt.org/sources/$pkgname-$pkgver.tar.xz
+source="https://libvirt.org/sources/libvirt-$pkgver.tar.xz
 	libvirt.confd
 	libvirt.initd
 	virtlogd.initd
@@ -45,13 +47,20 @@ subpackages="$subpackages $pkgname-common-drivers:_common_drivers"
 #     - CVE-2019-10166
 #     - CVE-2019-10161
 
+prepare() {
+	default_prepare
+	mkdir -p build
+	cd build
+	autoreconf -fi ../
+}
+
 build() {
-	cd "$builddir"
+	cd build
 	# qemu sets libexec dir to /usr/lib/qemu
 	export ac_cv_path_QEMU_BRIDGE_HELPER="/usr/lib/qemu/qemu-bridge-helper"
 	[ "$CARCH" = x86_64 ] && local _xen_opt="--with-libxl"
 	[ "$CARCH" = x86_64 ] && local _zfs_opt="--with-storage-zfs"
-	./configure \
+	../configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
@@ -70,7 +79,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
+	cd build
 	make DESTDIR="$pkgdir" install
 	install -D -m755 $srcdir/$pkgname.initd $pkgdir/etc/init.d/libvirtd
 	install -D -m755 $srcdir/$pkgname.confd $pkgdir/etc/conf.d/libvirtd
@@ -179,7 +188,7 @@ _common_drivers() {
 		"$subpkgdir"/etc/libvirt/
 }
 
-sha512sums="3c7760053c5aabf8b3662f48f21a25fd1005ba8871bb51f78ff2b0ce4053c7bebc728298f3e3d662695a1408fbd554d281257bfe6cd637eca9771375847cb939  libvirt-5.9.0.tar.xz
+sha512sums="bb518a6aa6731a7de4b24fc7b8ffdcd2cdd84dfe49047374e0f02265c274eb06dbe1732c9cc4954412853d36d9dd5c1124fb8a5e37f4c01654d85013773ffa23  libvirt-5.10.0.tar.xz
 9aba6ab73219a635c64a340ee8887356e644445c9128734cbce73f5d54778378da2f10a190365ad88a7db8bc95b1fb17f0c6ca41fc41bb786c09e1afe84d65dc  libvirt.confd
 734afb83b7a4703dd238f1d89dbc853a8c73bcf1994af648c41ab01ae4088e5c7a423f0cb91e5e31f2ae5e60c66d08a6e1583a1e3b88bb5554e0f9fd15ecc15c  libvirt.initd
 36b85f473d292be8df415256d01a562131d8ae61450ba3893658090a12d589ca32215382f56f286a830b4e59ffd98fbe1d92004f2ce14ca0834451b943cd8f2f  virtlogd.initd
