community/cfengine: upgrade to 3.15.0

--- a/community/cfengine/APKBUILD
+++ b/community/cfengine/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=cfengine
-pkgver=3.14.0
+pkgver=3.15.0
 pkgrel=0
 pkgdesc="A systems administration tool for networks"
 url="https://www.cfengine.com/"
@@ -13,7 +13,7 @@ subpackages="$pkgname-doc $pkgname-masterfiles::noarch"
 source="https://cfengine-package-repos.s3.amazonaws.com/tarballs/cfengine-$pkgver.tar.gz
 	https://cfengine-package-repos.s3.amazonaws.com/tarballs/cfengine-masterfiles-$pkgver.tar.gz"
 
-builddirmasterfiles="$srcdir"/cfengine-masterfiles-${pkgver%_p*}
+_builddirmasterfiles="$srcdir"/cfengine-masterfiles-${pkgver%_p*}
 options="!check" # testsuite shows some unknown errors
 
 # secfixes:
@@ -41,7 +41,7 @@ build() {
 		--without-pam
 	make
 
-	cd "$builddirmasterfiles"
+	cd "$_builddirmasterfiles"
 	./configure \
 		--prefix=/var/lib/cfengine
 	make
@@ -61,9 +61,9 @@ masterfiles() {
 	pkgdesc="Cfengine default masterfiles"
 	depends="cfengine"
 
-	cd "$builddirmasterfiles"
+	cd "$_builddirmasterfiles"
 	make install DESTDIR="$subpkgdir"
 }
 
-sha512sums="375f0a6880778c580b06bfea95c6b46d9757930e633f474f634c0d737996c8df871067e307d6a5915a5e732b1cb5c0ad31d57562f877930ed043a3ab1b3a3b5f  cfengine-3.14.0.tar.gz
-c31433c8c5fa566eb01158d8bfe34fd45216dc4681074994114eeee815d02d09860ee753ad8e15f56fb53492dbe6f65254a7e5e14626d3bc85bb661899f8ea49  cfengine-masterfiles-3.14.0.tar.gz"
+sha512sums="de15d8c7b84eadf6a042a89cdf45cda7bb8f0eace3936a7f5699bde9a06a6ee203348e2b11236b55052cdb1008c83687ef282e7bf662c9f9ad3db11cf4429f58  cfengine-3.15.0.tar.gz
+a5f1f6b5275ee3e8e913aafad2598f76406ba61ea5b5692da23fed7a5fdbd9828c5b9b5fd51ae080e628c483197469c9cc19f8f786b5496fcbbfebeaac1b414b  cfengine-masterfiles-3.15.0.tar.gz"
