testing/py3-argcomplete: upgrade to 1.11.0

--- a/testing/py3-argcomplete/APKBUILD
+++ b/testing/py3-argcomplete/APKBUILD
@@ -2,13 +2,14 @@
 # Maintainer:
 pkgname=py3-argcomplete
 _pkgname=${pkgname#py3-}
-pkgver=1.10.3
+pkgver=1.11.0
 pkgrel=0
 pkgdesc="Easy, extensible command line tab completion of arguments for your Python script"
 options="!check" # Tests are py2 dependent
 url="https://github.com/kislyuk/argcomplete"
 arch="noarch"
 license="Apache-2.0"
+depends="python3"
 makedepends="py3-setuptools"
 checkdepends="py3-coverage py3-flake8 py3-pexpect bash"
 source="$pkgname-$pkgver.tar.gz::https://github.com/kislyuk/$_pkgname/archive/v$pkgver.tar.gz
@@ -30,4 +31,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir" --optimize=1
 }
 
-sha512sums="1abbea725122aa82a3add0e617463a8c936a62c31117037f0fe8487866819d40a7ec8619e00ee3684c2d8feba4c4064f2587f741cc0acc15d5133e1943addaf5  py3-argcomplete-1.10.3.tar.gz"
+sha512sums="6ddcd921c454ac14cb3dba1fee2ca6d702b25953c2bc748948f0471f1ce5a0196ff46be29db9c5781018dd19b73041ba225514db8763b811c16130f47e8067cb  py3-argcomplete-1.11.0.tar.gz"
