--- a/testing/elisa/APKBUILD
+++ b/testing/elisa/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=elisa
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://kde.org/applications/multimedia/org.kde.elisa"
 pkgdesc="A simple music player aiming to provide a nice experience for its users"
 license="LGPL-3.0-or-later"
 depends="kirigami2"
-makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtmultimedia-dev qt5-qtsvg-dev qt5-qtquickcontrols2-dev kirigami2-dev ki18n-dev kdeclarative-dev kcoreaddons-dev baloo-dev kfilemetadata-dev kdoctools-dev kxmlgui-dev kconfig-dev kconfigwidgets-dev kcrash-dev kdbusaddons-dev kcmutils-dev kpackage-dev kio-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtmultimedia-dev qt5-qtsvg-dev qt5-qtquickcontrols2-dev kirigami2-dev ki18n-dev kdeclarative-dev kcoreaddons-dev baloo-dev kfilemetadata-dev kdoctools-dev kxmlgui-dev kconfig-dev kconfigwidgets-dev kcrash-dev kdbusaddons-dev kcmutils-dev kpackage-dev kio-dev vlc-dev"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/release-service/$pkgver/src/elisa-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
