--- a/community/gst-plugins-bad/APKBUILD
+++ b/community/gst-plugins-bad/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gst-plugins-bad
 pkgver=1.16.2
-pkgrel=0
+pkgrel=1
 pkgdesc="GStreamer streaming media framework bad plug-ins"
 url="https://gstreamer.freedesktop.org"
 arch="all"
@@ -14,7 +14,7 @@ makedepends="alsa-lib-dev bluez-dev bzip2-dev curl-dev directfb-dev faac-dev
 	libmodplug-dev libsrtp-dev libvdpau-dev libwebp-dev
 	libx11-dev mesa-dev meson neon-dev openssl-dev opus-dev orc-compiler
 	orc-dev spandsp-dev tiff-dev x265-dev vulkan-loader-dev vulkan-headers
-	wayland-dev wayland-protocols"
+	wayland-dev wayland-protocols gobject-introspection-dev"
 
 case "$CARCH" in
 	s390x) ;;
@@ -34,6 +34,7 @@ build() {
 		--buildtype=release \
 		-Dpackage-origin="https://alpinelinux.org" \
 		-Dpackage-name="GStreamer bad plug-ins (Alpine Linux)" \
+		-Dintrospection=enabled \
 		-Dvulkan=enabled \
 		. output
 	ninja -C output
