--- a/testing/spectrwm/APKBUILD
+++ b/testing/spectrwm/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Sascha Paunovic <azarus@posteo.net>
 pkgname=spectrwm
 _pkgname=SPECTRWM_
-pkgver=3.2.0
-_pkgver=3_2_0
+pkgver=3.3.0
+_pkgver=3_3_0
 pkgrel=0
 pkgdesc="dynamic, configurable tiling window manager for X11"
 options="!check" # No testsuite
@@ -14,7 +14,7 @@ depends="dmenu terminus-font"
 makedepends="bsd-compat-headers freetype-dev libxcursor-dev libxft-dev
 	libxrandr-dev libxt-dev xcb-util-keysyms-dev xcb-util-wm-dev"
 subpackages="$pkgname-doc"
-source="https://github.com/conformal/$pkgname/archive/$_pkgname$_pkgver.tar.gz"
+source="https://github.com/conformal/spectrwm/archive/$_pkgname$_pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$_pkgname$_pkgver"
 
 build() {
@@ -40,4 +40,4 @@ package() {
 	ln -s "$pkgdir"/usr/bin/spectrwm "$pkgdir"/usr/bin/scrotwm
 }
 
-sha512sums="038d7fc5716fbca324a078a311939ec23db6ff53e9ef33b2804c687838e729f0e7bb7f724c539e8ac8efed9607358962d4dd742db7f1a30bf3c6ab72eade1039  SPECTRWM_3_2_0.tar.gz"
+sha512sums="743affffd0437641a760ae29ccbd0084baee3354dadc48f3fc9ab70bffa2413ffe3af67f1223413aa1bbf8c679fbae1fbbdd71a840b3e44f5df83b527f63c1cc  SPECTRWM_3_3_0.tar.gz"
