testing/fennel: build with lua5.3
bind fennel too lua5.3

--- a/testing/fennel/APKBUILD
+++ b/testing/fennel/APKBUILD
@@ -2,18 +2,19 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=fennel
 pkgver=0.3.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A Lua Lisp Language"
 url="https://fennel-lang.org"
 arch="all !s390x" #did not build on s390x CI
 license="MIT"
-depends="lua5.1"
-source="fennel-$pkgver.tar.gz::https://github.com/bakpakin/Fennel/archive/$pkgver.tar.gz"
-_lua_version=5.1
+source="fennel-$pkgver.tar.gz::https://github.com/bakpakin/Fennel/archive/$pkgver.tar.gz
+		lua5.3-fennel.patch"
+_lua_version=5.3
+depends="lua$_lua_version"
 builddir="$srcdir"/Fennel-$pkgver
 
 check() {
-	make test
+	make test LUA="lua$_lua_version"
 }
 
 package() {
@@ -27,4 +28,5 @@ package() {
 			"$pkgdir/usr/bin/fennel"
 }
 
-sha512sums="bcc34429c616f4bad471a4ba6a830d58254582a82384d71a8bee81b72bb531d0322b5160d7e741cdff0bf8a421f0630b967ca45ae6594f06877b3029bc063385  fennel-0.3.1.tar.gz"
+sha512sums="bcc34429c616f4bad471a4ba6a830d58254582a82384d71a8bee81b72bb531d0322b5160d7e741cdff0bf8a421f0630b967ca45ae6594f06877b3029bc063385  fennel-0.3.1.tar.gz
+c9f45147b5eae695108557d19714c7013409451f68e8a55cc92340d80d222f2d7b7069d9b25bc32111580f0dd432b17bb349b40f02f28c3c7ebb89494c2cf788  lua5.3-fennel.patch"
