community/filezilla: remove unused dependency

--- a/community/filezilla/APKBUILD
+++ b/community/filezilla/APKBUILD
@@ -7,7 +7,7 @@ url="https://filezilla-project.org"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="gnutls-dev gtk+2.0-dev libfilezilla-dev>=0.18.0 libidn-dev
-	nettle-dev pugixml-dev sqlite-dev wxgtk3-dev xdg-utils"
+	pugixml-dev sqlite-dev wxgtk3-dev xdg-utils"
 subpackages="$pkgname-doc $pkgname-lang"
 source="https://download.filezilla-project.org/client/FileZilla_${pkgver}_src.tar.bz2"
 
