testing/wiringx: enable on armhf

--- a/testing/wiringx/APKBUILD
+++ b/testing/wiringx/APKBUILD
@@ -6,7 +6,7 @@ _commitid=8efb38935b92f86f4932d7bb52169694854f307c
 pkgrel=0
 pkgdesc="modular approach to several GPIO interfaces"
 url="https://github.com/wiringX/wiringX"
-arch="aarch64 armv7"
+arch="aarch64 armv7 armhf"
 license="MPL-2.0"
 options="!check" # no testsuite
 makedepends="cmake linux-headers"
