testing/php7-pecl-zstd: enable armhf after fix of zstd

--- a/testing/php7-pecl-zstd/APKBUILD
+++ b/testing/php7-pecl-zstd/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.7.7
 pkgrel=2
 pkgdesc="PECL Zstandard extension."
 url="https://pecl.php.net/package/zstd"
-arch="all !armhf"
+arch="all"
 license="MIT"
 depends="php7-common"
 makedepends="php7-dev autoconf re2c zstd-dev"
