--- a/testing/elisa/APKBUILD
+++ b/testing/elisa/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=elisa
 pkgver=19.12.0
 pkgrel=1
-arch="all"
+arch="all !s390x" # missing vlc-dev
 url="https://kde.org/applications/multimedia/org.kde.elisa"
 pkgdesc="A simple music player aiming to provide a nice experience for its users"
 license="LGPL-3.0-or-later"
