community/drupal7: security upgrade to 7.69

--- a/community/drupal7/APKBUILD
+++ b/community/drupal7/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=drupal7
-pkgver=7.67
+pkgver=7.69
 pkgrel=0
 pkgdesc="An open source content management platform"
 url="https://www.drupal.org/"
@@ -30,7 +30,7 @@ depends="php7-fpm
 makedepends="$depends_dev"
 subpackages="$pkgname-doc"
 pkggroups="www-data"
-source="http://ftp.drupal.org/files/projects/drupal-$pkgver.tar.gz"
+source="https://ftp.drupal.org/files/projects/drupal-$pkgver.tar.gz"
 
 builddir="$srcdir/drupal-$pkgver"
 options="!check" # This package not have testsuite
@@ -81,4 +81,4 @@ package() {
 		"$pkgdir"/var/lib/$pkgname/sites/default/files
 }
 
-sha512sums="0e4f60010b1395183cea19424e8c2849f93fb7285a081bf7d0c774b8e82f403083533059f58c3831950cc06dfa8117d443db52b66a521301ceac10b1b333aa28  drupal-7.67.tar.gz"
+sha512sums="521eec475cbd11d9c997f660c8cd3f92e7a164650eaec67bc1d40c53e901576bc827a3805d2341ab80e9a5bb2f4524e7541d0a99970f2a51a3e45a9ac8ae7880  drupal-7.69.tar.gz"
