community/webkit2gtk: disable on s390x, GCC 8.x crashes with ICE on s390x

--- a/community/webkit2gtk/APKBUILD
+++ b/community/webkit2gtk/APKBUILD
@@ -7,7 +7,7 @@ pkgver=2.26.2
 pkgrel=0
 pkgdesc="Portable web rendering engine WebKit for GTK+"
 url="https://webkitgtk.org/"
-arch="all"
+arch="all !s390x" # ICE with gcc8
 license="LGPL-2.0-or-later AND BSD-2-Clause"
 depends="bubblewrap xdg-dbus-proxy"
 makedepends="
