--- a/community/atril/APKBUILD
+++ b/community/atril/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.22.1
 pkgrel=0
 pkgdesc="A document viewer for MATE"
 url="https://github.com/mate-desktop/atril"
-arch="all"
+arch="all !s390x" # webkit2gtk
 license="GPL-2.0-or-later"
 depends="mate-icon-theme"
 # make check is broken: https://github.com/mate-desktop/atril/issues/167
