community/glade: remove support for webkit2gtk on s390x

--- a/community/glade/APKBUILD
+++ b/community/glade/APKBUILD
@@ -2,17 +2,22 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=glade
 pkgver=3.22.1
-pkgrel=1
+pkgrel=2
 pkgdesc="User Interface Designer for GTK+ and GNOME"
 url="https://glade.gnome.org/"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="gtk+3.0-dev libxml2-dev itstool gtk-doc paxmark intltool
-	webkit2gtk-dev py-gobject3-dev gobject-introspection-dev"
+	py-gobject3-dev gobject-introspection-dev"
 checkdepends="xvfb-run ibus adwaita-icon-theme"
 options="!check" # If adwaita-icon-theme wasn't installed e before we'd have to updathe the icon cache
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://download.gnome.org/sources/glade/${pkgver%.*}/glade-$pkgver.tar.xz"
+
+case "$CARCH" in
+	s390x) ;;
+	*) makedepends="$makedepends webkit2gtk-dev" ;;
+esac
 
 build() {
 	./configure \
