--- a/community/gnome-online-accounts/APKBUILD
+++ b/community/gnome-online-accounts/APKBUILD
@@ -4,7 +4,7 @@ pkgver=3.32.0
 pkgrel=0
 pkgdesc="Single sign-on framework for GNOME"
 url="https://wiki.gnome.org/Projects/GnomeOnlineAccounts"
-arch="all"
+arch="all !s390x"
 license="GPL-2.0-or-later"
 makedepends="gnome-desktop-dev libxslt itstool libxml2-utils
 	webkit2gtk-dev json-glib-dev rest-dev libsecret-dev
