--- a/community/gvfs/APKBUILD
+++ b/community/gvfs/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.40.2
 pkgrel=0
 pkgdesc="Backends for the gio framework in GLib"
 url="https://wiki.gnome.org/Projects/gvfs"
-arch="all"
+arch="all !s390x" # gnome-online-accounts -> webkit2gtk
 license="LGPL-2.0-or-later"
 makedepends="fuse-dev libgudev-dev expat-dev samba-dev libxml2-dev
 	libsoup-dev avahi-dev libarchive-dev udisks2-dev libgphoto2-dev
