community/libgdata: disable on s390x due to webkit2gtk

--- a/community/libgdata/APKBUILD
+++ b/community/libgdata/APKBUILD
@@ -4,7 +4,7 @@ pkgver=0.17.9
 pkgrel=2
 pkgdesc="access library for gdata"
 url="https://wiki.gnome.org/Projects/libgdata"
-arch="all"
+arch="all !s390x" # gnome-online-accounts -> webkit2gtk
 license="LGPL-2.1-or-later"
 depends="gsettings-desktop-schemas"
 makedepends="intltool uhttpmock-dev glib-dev vala gobject-introspection-dev
