community/midori: disable on s390x due to webkit2gtk

--- a/community/midori/APKBUILD
+++ b/community/midori/APKBUILD
@@ -4,7 +4,7 @@ pkgver=8.0
 pkgrel=0
 pkgdesc="A lightweight web browser based on Gtk WebKit"
 url="https://www.midori-browser.org"
-arch="all"
+arch="all !s390x" # webkit2gtk
 license="LGPL-2.0-or-later"
 depends=
 makedepends="cmake librsvg-dev paxmark python2 vala gtk+3.0-dev gcr-dev
