testing/xmrig: disable on aarch64; gets stuck

--- a/testing/xmrig/APKBUILD
+++ b/testing/xmrig/APKBUILD
@@ -1,12 +1,11 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
-
 pkgname=xmrig
 pkgver=5.4.0
 pkgrel=0
 pkgdesc="XMRig is a high performance Monero (XMR) miner"
 url="https://github.com/xmrig/xmrig"
-arch="all !s390x !ppc64le"
+arch="all !s390x !ppc64le !aarch64" # gets stuck on aarch64 builder
 license="GPL-3.0-or-later"
 options="!check" # No test suite from upstream
 makedepends="cmake libmicrohttpd-dev libuv-dev openssl-dev hwloc-dev"
