--- a/community/kdeconnect/APKBUILD
+++ b/community/kdeconnect/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kdeconnect
 pkgver=1.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Adds communication between KDE and your smartphone"
 url="https://community.kde.org/KDEConnect"
 arch="all"
 license="GPL-2.0-only OR GPL-3.0-only"
-depends="kirigami2"
+depends="kirigami2 sshfs"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtmultimedia-dev ki18n-dev kconfigwidgets-dev kdbusaddons-dev kiconthemes-dev knotifications-dev kio-dev kcmutils-dev kservice-dev kirigami2-dev kpeople-dev kdoctools-dev qca-dev pulseaudio-qt kpeoplevcard-dev"
 checkdepends="xvfb-run"
 subpackages="$pkgname-doc $pkgname-lang"
