testing/aom: disable on armv7

--- a/testing/aom/APKBUILD
+++ b/testing/aom/APKBUILD
@@ -6,7 +6,7 @@ _commit=db8f273c9d83b1e6d602b2d1c4e2f055a6f58acc
 pkgrel=0
 pkgdesc="Alliance for Open Media (AOM) AV1 codec SDK"
 url="https://aomedia.org/"
-arch="all"
+arch="all !armv7"
 license="custom"
 options="!check" # No test suite from upstream
 makedepends="cmake perl python3 yasm"
