--- a/testing/rav1e/APKBUILD
+++ b/testing/rav1e/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=rav1e
 pkgver=0.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="The fastest and safest AV1 encoder"
 url="https://github.com/xiph/rav1e"
 arch="all !s390x" # no cargo for s390x
 license="BSD-2-Clause custom"
 options="!check" # No test suite from upstream
 makedepends="cargo nasm"
-subpackages="$pkgname-doc"
+subpackages="$pkgname-doc $pkgname-libs"
 source="$pkgname-$pkgver.tar.gz::https://github.com/xiph/rav1e/archive/v$pkgver.tar.gz"
 
 prepare() {
