testing/pg_cron: upgrade to 1.2.0

--- a/testing/pg_cron/APKBUILD
+++ b/testing/pg_cron/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: G.J.R. Timmer <gjr.timmer@gmail.com>
 # Maintainer: G.J.R. Timmer <gjr.timmer@gmail.com>
 pkgname=pg_cron
-pkgver=1.1.4
+pkgver=1.2.0
 pkgrel=0
 pkgdesc="Cron-based scheduler for PostgreSQL 9.5+"
 url="https://github.com/citusdata/pg_cron"
@@ -10,7 +10,7 @@ license="PostgreSQL"
 depends="postgresql"
 makedepends="postgresql-dev"
 install="$pkgname.post-install"
-source="$pkgname-$pkgver.tar.gz::https://github.com/citusdata/$pkgname/archive/v${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/citusdata/pg_cron/archive/v$pkgver.tar.gz"
 options="!check"  # no tests provided
 
 prepare() {
@@ -29,4 +29,4 @@ package() {
 	install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
 
-sha512sums="1b63f5f3aa690fce1c35143078dbcdd8708a09bf97c8c2065cea01f6388918f6e7c9821d08fbfd91dff30f65c5edb8487fa0a4038fe42326b5c73de438252846  pg_cron-1.1.4.tar.gz"
+sha512sums="fe11fc42fa8d3de4ff08440f96bcc5c228408ae01f7c1cf676d8dbab6ebef9aa0496aa3d5e785ec850eee3b484dc7ec0bf930a9c09e4267d10375adb9027f0b1  pg_cron-1.2.0.tar.gz"
