testing/kakoune: upgrade to 2019.12.10

--- a/testing/kakoune/APKBUILD
+++ b/testing/kakoune/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Jakub Skrzypnik <j.skrzypnik@openmailbox.org>
 pkgname=kakoune
-pkgver=2019.07.01
+pkgver=2019.12.10
 pkgrel=0
 pkgdesc="Code editor heavily inspired by Vim, but with less keystrokes"
 url="http://kakoune.org"
@@ -8,7 +8,7 @@ arch="all"
 license="Unlicense"
 makedepends="ncurses-dev asciidoc"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/mawww/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/mawww/kakoune/archive/v$pkgver.tar.gz"
 
 builddir="$srcdir/$pkgname-$pkgver/src"
 build() {
@@ -23,4 +23,4 @@ package() {
 	make PREFIX="/usr" DESTDIR="$pkgdir/" debug=no install
 }
 
-sha512sums="35e4ae68c18afdb0fcd531877eecf54a52d1f86b586bc7272b0183367515d9a747b498292449e8a87c03a87cdd8087b5932f822ffeb5a9ff6cd7f431376e4c60  kakoune-2019.07.01.tar.gz"
+sha512sums="9ed866a27f1dbbab701dcb7412450c4dd8c20cafebaedda351a0b67b9489b1ad8de82fa527b357a55aab86b0dc3e2b435f7d6177fd056331f5576ddb7befbd15  kakoune-2019.12.10.tar.gz"
