community/tcllib: upgrade to 1.20

--- a/community/tcllib/APKBUILD
+++ b/community/tcllib/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: tcely <tcllib+aports@tcely.33mail.com>
 # Maintainer:
 pkgname=tcllib
-pkgver=1.19
-pkgrel=1
+pkgver=1.20
+pkgrel=0
 pkgdesc="Tcl Standard Library"
 url="https://core.tcl.tk/tcllib"
 arch="noarch"
@@ -10,8 +10,7 @@ license="TCL"
 depends="tcl"
 makedepends="tcl-dev"
 subpackages="$pkgname-doc"
-source="https://core.tcl.tk/$pkgname/uv/$pkgname-$pkgver.tar.xz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://core.tcl.tk/tcllib/uv/tcllib-$pkgver.tar.xz"
 
 build() {
 	./configure \
@@ -44,4 +43,4 @@ check() {
 # Only SHA256 sums are provided by upstream.
 #sha256sums="4a4f73cc8aca1d6b625717b0ace61205cddaa7768f5f9a0e160dd62abb4177ef  tcllib-1.19.tar.xz"
 
-sha512sums="08f549a3513316919c61f015a604aa671a73c0fd59a8a20b916d106e7d7d6f4bd59b485a92307778cfea1b00f78c2972a086b1bf960fe85a26fe273b7ada8d12  tcllib-1.19.tar.xz"
+sha512sums="d2c20642f91cdc7bf3b329025be80eb9288d0919fa439c2066349b52950cf3c343f39c7745b9b08ec28a884ff2f219fe0fb5f47023f1266b6a6de6ae54852412  tcllib-1.20.tar.xz"
