community/kmousetool: move from testing

--- a/community/kmousetool/APKBUILD
+++ b/community/kmousetool/APKBUILD
@@ -8,11 +8,18 @@ url="https://kde.org/applications/utilities/org.kde.kmousetool"
 pkgdesc="A program that clicks the mouse for you"
 license="GPL-2.0-or-later AND GFDL-1.2-only"
 makedepends="extra-cmake-modules qt5-qtbase-dev kdbusaddons-dev kdoctools-dev ki18n-dev kiconthemes-dev knotifications-dev kxmlgui-dev phonon-dev libxt-dev libxtst-dev"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kmousetool-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -20,10 +27,12 @@ build() {
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
