testing/rav1e: fix build on x86

--- a/testing/rav1e/APKBUILD
+++ b/testing/rav1e/APKBUILD
@@ -12,6 +12,10 @@ makedepends="cargo nasm"
 subpackages="$pkgname-doc $pkgname-libs"
 source="$pkgname-$pkgver.tar.gz::https://github.com/xiph/rav1e/archive/v$pkgver.tar.gz"
 
+case "$CARCH" in
+	x86) CFLAGS="$CFLAGS -fno-stack-protector" ;;
+esac
+
 prepare() {
 	RUSTFLAGS="-C opt-level=0" \
 		cargo install --force --root "$srcdir" cargo-c
