--- a/testing/bullet/APKBUILD
+++ b/testing/bullet/APKBUILD
@@ -2,13 +2,13 @@
 # Contributor: Asriel Dreemurr <asriel.danctnix@gmail.com>
 # Maintainer: Danct12 <danct12@disroot.org>
 pkgname=bullet
-pkgver=2.88
+pkgver=2.89
 pkgrel=0
 pkgdesc="A 3D Collision Detection and Rigid Body Dynamics Library for games and animation"
 url="https://pybullet.org/Bullet/phpBB3/"
 arch="all"
 license="Zlib"
-makedepends="cmake doxygen graphviz-dev ttf-dejavu mesa-dev glu-dev python3-dev py-numpy-dev"
+makedepends="cmake doxygen graphviz-dev ttf-dejavu mesa-dev glu-dev python3-dev py3-numpy-dev"
 options="!check" # cannot build tests
 subpackages="$pkgname-dev $pkgname-doc"
 source="bullet3-$pkgver.tar.gz::https://github.com/bulletphysics/bullet3/archive/$pkgver.tar.gz"
@@ -60,4 +60,4 @@ doc() {
 }
 
 
-sha512sums="15face1940d496c96fd19a44139d11d2cbb629526c40432be4a0eef5fa9a532c842ec7318248c0359a080f2034111bf1a3c2d3a6fd789bec675bd368fac7bd93  bullet3-2.88.tar.gz"
+sha512sums="3c4ba6a3b3623ef44dd4a23e0bc2e90dec1f2b7af463edcb886e110feac1dfb4a91945f0ed640052cac228318539e275976d37238102fb10a0f78aef065a730b  bullet3-2.89.tar.gz"
